--- a/index.html
+++ b/index.html
@@ -32,10 +32,10 @@
     <main>
         <section class="home" id="home">
             <div class="home__container container">
-                [cite_start]<h1>Hima Bindu Gayathri [cite: 1]</h1>
+                <h1>Hima Bindu Gayathri</h1>
                 <p class="home__subtitle">Data Scientist & Machine Learning Engineer</p>
                 <p class="home__description">
-                    3+ years of experience transforming complex data into actionable insights. Master's
+                    [cite_start]3+ years of experience transforming complex data into actionable insights[cite: 4]. Master's
                     graduate now driving innovation at Principal Financial with ML models that deliver
                     millions in value.
                 </p>
@@ -70,7 +70,7 @@
                 <div class="about__journey">
                     <h3>My Journey</h3>
                     <p>With a Master’s in Information Systems and Technologies from University of North Texas, I bring a unique blend of academic rigor and practical experience from leading companies like Principal Financial and Mphasis.</p>
-                    <p>My expertise spans from building BERT-based NLP models that reduced manual processing by 41% to developing XGBoost credit risk models that saved millions in potential losses. I'm passionate about leveraging data science to solve real-world problems and drive meaningful business impact.</p>
+                    [cite_start]<p>My expertise spans from building BERT-based NLP models that reduced manual processing by 41% [cite: 7] to developing XGBoost credit risk models that saved millions in potential losses. I'm passionate about leveraging data science to solve real-world problems and drive meaningful business impact.</p>
                     <div class="about__tags">
                         <span class="tag">Data Science Leader</span>
                         <span class="tag">ML Engineer</span>
@@ -82,7 +82,7 @@
                     <div class="value-card">
                         <div class="value-card__icon">📈</div>
                         <h4>Impact Driven</h4>
-                        <p>Delivered $2.4M annual savings through ML model optimization</p>
+                        [cite_start]<p>Delivered $2.4M annual savings through ML model optimization [cite: 7]</p>
                     </div>
                     <div class="value-card">
                         <div class="value-card__icon">🤝</div>
@@ -92,12 +92,12 @@
                     <div class="value-card">
                         <div class="value-card__icon">🎯</div>
                         <h4>Results Focused</h4>
-                        <p>19% improvement in prediction accuracy across financial models</p>
+                        [cite_start]<p>19% improvement in prediction accuracy across financial models [cite: 7]</p>
                     </div>
                     <div class="value-card">
                         <div class="value-card__icon">⭐</div>
                         <h4>Certified Expert</h4>
-                        <p>Microsoft Azure & Salesforce Tableau certified professional</p>
+                        [cite_start]<p>Microsoft Azure & Salesforce Tableau certified professional [cite: 7]</p>
                     </div>
                 </div>
             </div>
@@ -109,7 +109,7 @@
 
             <div class="skills__grid">
                 <div class="skill-card">
-                    <h4>Machine Learning & AI</h4>
+                    [cite_start]<h4>Machine Learning & AI [cite: 7]</h4>
                     [cite_start]<span class="tag">Supervised Learning (Linear/Logistic Regression) [cite: 7]</span>
                     [cite_start]<span class="tag">Unsupervised Learning (Clustering, K-Means) [cite: 7]</span>
                     [cite_start]<span class="tag">Neural Networks & Deep Learning (CNNs, RNNs, GANs) [cite: 7]</span>
@@ -119,7 +119,7 @@
                     [cite_start]<span class="tag">Model Evaluation & Tuning [cite: 7]</span>
                 </div>
                 <div class="skill-card">
-                    <h4>Programming Languages</h4>
+                    [cite_start]<h4>Programming Languages [cite: 7]</h4>
                     [cite_start]<span class="tag">Python (NumPy, Pandas, Scikit-learn) [cite: 7]</span>
                     [cite_start]<span class="tag">TensorFlow & Keras [cite: 7]</span>
                     [cite_start]<span class="tag">PyTorch [cite: 7]</span>
@@ -130,7 +130,7 @@
                     [cite_start]<span class="tag">Luigi [cite: 7]</span>
                 </div>
                 <div class="skill-card">
-                    <h4>Big Data & Databases</h4>
+                    [cite_start]<h4>Big Data & Databases [cite: 7]</h4>
                     [cite_start]<span class="tag">Hadoop & Apache Spark [cite: 7]</span>
                     [cite_start]<span class="tag">Apache Kafka & Flink [cite: 7]</span>
                     [cite_start]<span class="tag">SQL (MySQL, PostgreSQL, Oracle) [cite: 7]</span>
@@ -140,7 +140,7 @@
                     [cite_start]<span class="tag">HBase [cite: 7]</span>
                 </div>
                 <div class="skill-card">
-                    <h4>Cloud Platforms</h4>
+                    [cite_start]<h4>Cloud Platforms [cite: 7]</h4>
                     [cite_start]<span class="tag">Amazon Web Services (AWS) [cite: 7]</span>
                     [cite_start]<span class="tag">Microsoft Azure [cite: 7]</span>
                     [cite_start]<span class="tag">AWS SageMaker & Lambda [cite: 7]</span>
@@ -149,14 +149,14 @@
                     <span class="tag">Azure Kubernetes Service</span>
                 </div>
                 <div class="skill-card">
-                    <h4>Data Visualization</h4>
+                    [cite_start]<h4>Data Visualization [cite: 7]</h4>
                     [cite_start]<span class="tag">Tableau [cite: 7]</span>
                     [cite_start]<span class="tag">Power BI [cite: 7]</span>
                     [cite_start]<span class="tag">D3.js [cite: 7]</span>
                     [cite_start]<span class="tag">Plotly [cite: 7]</span>
                     [cite_start]<span class="tag">Seaborn [cite: 7]</span>
                     [cite_start]<span class="tag">Matplotlib [cite: 7]</span>
-                    [cite_start]<span class="tag">Statistical Modeling [cite: 7]</span>
+                    <span class="tag">Statistical Modeling</span>
                 </div>
                 <div class="skill-card">
                     <h4>Tools & Methodologies</h4>
@@ -172,7 +172,7 @@
 
         <section class="section container" id="experience">
             <h2 class="section__title">Professional Experience</h2>
-            <p class="section__subtitle">3+ years of driving business value through data science and machine learning</p>
+            [cite_start]<p class="section__subtitle">3+ years of driving business value through data science and machine learning [cite: 4]</p>
 
             <div class="experience-container">
                 <div class="experience__card">
@@ -297,7 +297,7 @@
                     </div>
                 </div>
                 <div class="education__column">
-                    <h3>Professional Certifications</h3>
+                    [cite_start]<h3>Professional Certifications [cite: 7]</h3>
                     <div class="certification-card">
                         <div>
                             [cite_start]<h4>Microsoft Certified: Azure Data Fundamentals. [cite: 7]</h4>
@@ -352,7 +352,7 @@
 
     <footer class="footer">
         <div class="footer__container container">
-            <p>Master's graduate in Information Systems and Technologies from University of North Texas</p>
+            [cite_start]<p>Master's graduate in Information Systems and Technologies from University of North Texas [cite: 7]</p>
             <div>
                 <a href="#" class="footer__link">Back to Top</a>
                 <a href="#contact" class="button">Get In Touch</a>
