--- a/index.html
+++ b/index.html
@@ -1,18 +1,3 @@
-I am very sorry for the confusion. Let me explain clearly.
-
-The \`\` tags you see are **only for our chat**. They are part of my internal process to show you where I get information from, like from your resume. They are **not** part of the website code itself and will **not** appear on your live site.
-
-You should only copy the code that is inside the special code blocks.
-
-To make it perfectly clear, here is the final and complete `index.html` code with all three companies and **zero citations**. Please use this.
-
------
-
-### \#\# Final Website Code (`index.html`)
-
-Copy everything inside the box below and paste it into your `index.html` file on GitHub.
-
-```html
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -276,19 +261,24 @@ Copy everything inside the box below and paste it into your `index.html` file on
             <p class="section__subtitle">Innovative solutions that demonstrate expertise in machine learning and data engineering</p>
             <div class="projects__grid">
                 <div class="project-card">
-                    <h3>Financial Risk Forecasting with Machine Learning</h3>
-                    <p class="project-description">Built predictive models using logistic regression and random forests, increasing forecast accuracy of financial risk scenarios by 25% across high-value portfolios. Evaluated model accuracy, precision, and recall using cross-validation and confusion matrix analysis in Python (scikit-learn).</p>
+                    <h3>A/B Testing Analysis</h3>
+                    <p class="project-description">This project focuses on analyzing the results of an A/B test to determine if a new webpage design leads to a higher conversion rate. It includes hypothesis testing, statistical analysis using Python, and a recommendation on whether to launch the new design.</p>
                     <div class="project-actions">
-                        <a href="#" class="button button--outline">View Code</a>
-                        <a href="#" class="button button--outline">Live Demo</a>
+                        <a href="https://github.com/bindugayathri/ab-testing-project" target="_blank" class="button button--outline">View Code</a>
                     </div>
                 </div>
                 <div class="project-card">
-                    <h3>Accelerated ETL with Airflow and SQL</h3>
-                    <p class="project-description">Designed and scheduled modular DAGs in Apache Airflow, reducing ETL latency by 40% for daily financial reporting jobs. Streamlined complex SQL transformations across raw, staging, and analytics layers, improving end-to-end data pipeline reliability.</p>
+                    <h3>Customer Churn Dashboard</h3>
+                    <p class="project-description">An interactive dashboard built with Tableau to visualize customer churn. This project involves data cleaning, feature engineering, and creating KPIs to identify key factors contributing to churn, enabling stakeholders to make data-driven decisions to improve retention.</p>
                     <div class="project-actions">
-                        <a href="#" class="button button--outline">View Code</a>
-                        <a href="#" class="button button--outline">Live Demo</a>
+                        <a href="https://github.com/bindugayathri/customer-churn-dashboard" target="_blank" class="button button--outline">View Code</a>
+                    </div>
+                </div>
+                <div class="project-card">
+                    <h3>Real-Time Data Pipeline</h3>
+                    <p class="project-description">This project demonstrates the construction of a real-time data streaming pipeline using Apache Kafka, Spark Streaming, and a database like Cassandra. It is designed to process, analyze, and store data with low latency for immediate insights.</p>
+                    <div class="project-actions">
+                        <a href="https://github.com/bindugayathri/real-time-pipeline" target="_blank" class="button button--outline">View Code</a>
                     </div>
                 </div>
             </div>
@@ -377,4 +367,3 @@ Copy everything inside the box below and paste it into your `index.html` file on
 
 </body>
 </html>
-```
