--- a/index.html
+++ b/index.html
@@ -264,21 +264,21 @@
                     <h3>A/B Testing Analysis</h3>
                     <p class="project-description">This project focuses on analyzing the results of an A/B test to determine if a new webpage design leads to a higher conversion rate. It includes hypothesis testing, statistical analysis using Python, and a recommendation on whether to launch the new design.</p>
                     <div class="project-actions">
-                        <a href="https://github.com/bindugayathri/ab-testing-project" target="_blank" class="button button--outline">View Code</a>
+                        <a href="https://github.com/bindugayathri/ab-testing-project" target="_blank" class="button button--outline">View on github</a>
                     </div>
                 </div>
                 <div class="project-card">
                     <h3>Customer Churn Dashboard</h3>
                     <p class="project-description">An interactive dashboard built with Tableau to visualize customer churn. This project involves data cleaning, feature engineering, and creating KPIs to identify key factors contributing to churn, enabling stakeholders to make data-driven decisions to improve retention.</p>
                     <div class="project-actions">
-                        <a href="https://github.com/bindugayathri/customer-churn-dashboard" target="_blank" class="button button--outline">View Code</a>
+                        <a href="https://github.com/bindugayathri/customer-churn-dashboard" target="_blank" class="button button--outline">View on github</a>
                     </div>
                 </div>
                 <div class="project-card">
                     <h3>Real-Time Data Pipeline</h3>
                     <p class="project-description">This project demonstrates the construction of a real-time data streaming pipeline using Apache Kafka, Spark Streaming, and a database like Cassandra. It is designed to process, analyze, and store data with low latency for immediate insights.</p>
                     <div class="project-actions">
-                        <a href="https://github.com/bindugayathri/real-time-pipeline" target="_blank" class="button button--outline">View Code</a>
+                        <a href="https://github.com/bindugayathri/real-time-pipeline" target="_blank" class="button button--outline">View on github</a>
                     </div>
                 </div>
             </div>
@@ -367,3 +367,4 @@
 
 </body>
 </html>
+
