--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                         View My Work 
                         <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor" class="w-5 h-5"><path fill-rule="evenodd" d="M5.22 8.22a.75.75 0 0 1 1.06 0L10 11.94l3.72-3.72a.75.75 0 1 1 1.06 1.06l-4.25 4.25a.75.75 0 0 1-1.06 0L5.22 9.28a.75.75 0 0 1 0-1.06Z" clip-rule="evenodd" /></svg>
                     </a>
-                    <a href="Bindu_DS.pdf" download class="button button--outline button--flex">
+                    <a href="assets/Bindu_DS.pdf" download class="button button--outline button--flex">
                         Download Resume
                         <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor" class="w-5 h-5"><path d="M10.75 2.75a.75.75 0 0 0-1.5 0v8.614L6.295 8.235a.75.75 0 1 0-1.09 1.03l4.25 4.5a.75.75 0 0 0 1.09 0l4.25-4.5a.75.75 0 0 0-1.09-1.03l-2.955 3.129V2.75Z" /><path d="M3.5 12.75a.75.75 0 0 0-1.5 0v2.5A2.75 2.75 0 0 0 4.75 18h10.5A2.75 2.75 0 0 0 18 15.25v-2.5a.75.75 0 0 0-1.5 0v2.5c0 .69-.56 1.25-1.25 1.25H4.75c-.69 0-1.25-.56-1.25-1.25v-2.5Z" /></svg>
                     </a>
@@ -340,42 +340,3 @@
             <div class="contact__grid">
                 <div class="contact-card">
                     <h4>Email</h4>
-                    <p>Ready to discuss opportunities</p>
-                    <a href="mailto:gayathri260501@gmail.com" class="button">Send Email</a>
-                </div>
-                <div class="contact-card">
-                    <h4>LinkedIn</h4>
-                    <p>Let's connect professionally</p>
-                    <a href="https://www.linkedin.com/in/hima-bindu-gayathri-134a31208" target="_blank" class="button button--outline">Connect on LinkedIn</a>
-                </div>
-                 <div class="contact-card">
-                    <h4>Tableau</h4>
-                    <p>View my data visualizations</p>
-                    <a href="https://public.tableau.com/app/profile/gayathri7799/vizzes" target="_blank" class="button button--outline">Visit Tableau Public</a>
-                </div>
-                <div class="contact-info-card">
-                    <div>
-                        <h4>Location</h4>
-                        <p>Denton, Texas</p>
-                    </div>
-                    <div>
-                        <h4>Phone</h4>
-                        <p>+1 (469) 260-0258</p>
-                    </div>
-                </div>
-            </div>
-        </section>
-    </main>
-
-    <footer class="footer">
-        <div class="footer__container container">
-            <p>Master's graduate in Information Systems and Technologies from University of North Texas</p>
-            <div>
-                <a href="#" class="footer__link">Back to Top</a>
-                <a href="#contact" class="button">Get In Touch</a>
-            </div>
-        </div>
-    </footer>
-
-</body>
-</html>
