--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
     <header class="header">
         <nav class="nav container">
-            <a href="#" class="nav__logo">HBG</a>
+            <a href="#" class="nav__logo">Bindu</a>
             <div class="nav__menu">
                 <ul class="nav__list">
                     <li><a href="#home" class="nav__link">Home</a></li>
@@ -44,7 +44,7 @@
                         View My Work 
                         <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor" class="w-5 h-5"><path fill-rule="evenodd" d="M5.22 8.22a.75.75 0 0 1 1.06 0L10 11.94l3.72-3.72a.75.75 0 1 1 1.06 1.06l-4.25 4.25a.75.75 0 0 1-1.06 0L5.22 9.28a.75.75 0 0 1 0-1.06Z" clip-rule="evenodd" /></svg>
                     </a>
-                    <a href="assets/Bindu_DS.pdf" download class="button button--outline button--flex">
+                    <a href="Bindu_DS.pdf" download class="button button--outline button--flex">
                         Download Resume
                         <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor" class="w-5 h-5"><path d="M10.75 2.75a.75.75 0 0 0-1.5 0v8.614L6.295 8.235a.75.75 0 1 0-1.09 1.03l4.25 4.5a.75.75 0 0 0 1.09 0l4.25-4.5a.75.75 0 0 0-1.09-1.03l-2.955 3.129V2.75Z" /><path d="M3.5 12.75a.75.75 0 0 0-1.5 0v2.5A2.75 2.75 0 0 0 4.75 18h10.5A2.75 2.75 0 0 0 18 15.25v-2.5a.75.75 0 0 0-1.5 0v2.5c0 .69-.56 1.25-1.25 1.25H4.75c-.69 0-1.25-.56-1.25-1.25v-2.5Z" /></svg>
                     </a>
@@ -340,3 +340,4 @@
             <div class="contact__grid">
                 <div class="contact-card">
                     <h4>Email</h4>
+
