--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
     <header class="header">
         <nav class="nav container">
-            <a href="#" class="nav__logo">Bindu</a>
+            <a href="#" class="nav__logo">HBG</a>
             <div class="nav__menu">
                 <ul class="nav__list">
                     <li><a href="#home" class="nav__link">Home</a></li>
@@ -340,4 +340,42 @@
             <div class="contact__grid">
                 <div class="contact-card">
                     <h4>Email</h4>
+                    <p>Ready to discuss opportunities</p>
+                    <a href="mailto:gayathri260501@gmail.com" class="button">Send Email</a>
+                </div>
+                <div class="contact-card">
+                    <h4>LinkedIn</h4>
+                    <p>Let's connect professionally</p>
+                    <a href="https://www.linkedin.com/in/hima-bindu-gayathri-134a31208" target="_blank" class="button button--outline">Connect on LinkedIn</a>
+                </div>
+                 <div class="contact-card">
+                    <h4>Tableau</h4>
+                    <p>View my data visualizations</p>
+                    <a href="https://public.tableau.com/app/profile/gayathri7799/vizzes" target="_blank" class="button button--outline">Visit Tableau Public</a>
+                </div>
+                <div class="contact-info-card">
+                    <div>
+                        <h4>Location</h4>
+                        <p>Denton, Texas</p>
+                    </div>
+                    <div>
+                        <h4>Phone</h4>
+                        <p>+1 (469) 260-0258</p>
+                    </div>
+                </div>
+            </div>
+        </section>
+    </main>
 
+    <footer class="footer">
+        <div class="footer__container container">
+            <p>Master's graduate in Information Systems and Technologies from University of North Texas</p>
+            <div>
+                <a href="#" class="footer__link">Back to Top</a>
+                <a href="#contact" class="button">Get In Touch</a>
+            </div>
+        </div>
+    </footer>
+
+</body>
+</html>
