--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
     <header class="header">
         <nav class="nav container">
-            <a href="#" class="nav__logo">HBG</a>
+            <a href="#" class="nav__logo">Bindu</a>
             <div class="nav__menu">
                 <ul class="nav__list">
                     <li><a href="#home" class="nav__link">Home</a></li>
@@ -379,3 +379,4 @@
 
 </body>
 </html>
+
