--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
     <header class="header">
         <nav class="nav container">
-            <a href="#" class="nav__logo">Bindu</a>
+            <a href="#" class="nav__logo">HBG</a>
             <div class="nav__menu">
                 <ul class="nav__list">
                     <li><a href="#home" class="nav__link">Home</a></li>
@@ -341,7 +341,7 @@
                 <div class="contact-card">
                     <h4>Email</h4>
                     <p>Ready to discuss opportunities</p>
-                    <a href="mailto:gayathri260501@gmail.com" class="button">Send Email</a>
+                    <a href="mailto:gayathri260501@gmail.com" class="button button--outline">Send Email</a>
                 </div>
                 <div class="contact-card">
                     <h4>LinkedIn</h4>
@@ -379,4 +379,3 @@
 
 </body>
 </html>
-
